# automine-loop

./: .gitignore  README.md  step.md
data_select/: README.md  README_zh.md  pyproject.toml
data_select/app/: streamlit_app.py
data_select/configs/: active_learning.yaml  dataset.yaml  embedding.yaml
data_select/reports/: project_plan.md
data_select/scripts/: run_nuscenes_experiment.sh  server_train.sh  sync_results.ps1  sync_to_server.ps1
data_select/src/automine_loop/: __init__.py  cli.py  io.py
data_select/src/automine_loop/active_learning/: __init__.py  sampler.py
data_select/src/automine_loop/classifier/: __init__.py  linear_probe.py  mlp.py
data_select/src/automine_loop/clustering/: cluster.py
data_select/src/automine_loop/dataset/: demo_data.py  nuscenes_adapter.py
data_select/src/automine_loop/embedding/: __init__.py  clip_encoder.py  dinov2_encoder.py  encoders.py
data_select/src/automine_loop/evaluation/: metrics.py
data_select/src/automine_loop/pipeline/: run_demo.py  stages.py
data_select/src/automine_loop/quality/: __init__.py  features.py  rules.py
data_select/src/automine_loop/retrieval/: __init__.py  index.py
data_select/tests/: test_smoke.py
