[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automine-loop"
version = "0.1.0"
description = "Unlabeled autonomous-driving data selection and closed-loop mining toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "Pillow>=10.0",
  "matplotlib>=3.7",
  "streamlit>=1.32",
  "PyYAML>=6.0",
  "tabulate>=0.9",
]

[project.optional-dependencies]
full = [
  "pyarrow>=14.0",
  "opencv-python>=4.8",
  "faiss-cpu>=1.7",
  "hdbscan>=0.8",
  "torch>=2.0",
  "torchvision>=0.15",
  "transformers>=4.40",
  "nuscenes-devkit>=1.1",
  "pyspark>=3.5",
]

[project.scripts]
automine = "automine_loop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
